crates/keron-lang/tests/corpus/errors/check/match_pattern_shadows_param.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: pattern binding `x` would shadow a parameter in this scope
  --> 3:5
  |
3 |     x => x + 1,
  |     ^^
